# T1

./: Dockerfile  pyproject.toml
myproject/: db.sqlite3
myproject/file_processor/: forms.py  models.py  test.py  views.py
myproject/file_processor/migrations/: 0001_initial.py
myproject/file_processor/templates/file_processor/: chat.html  home.html  result.html  upload.html
myproject/myproject/: settings.py  urls.py
myproject/static/: preview.js  styles.css
