[tool.poetry]
name = "t1hackaton"
version = "0.1.0"
description = ""
authors = ["f <fdrverba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
python-docx = "^1.1.2"
python-pptx = "^1.0.2"
openai = "^1.55.1"
langchain = "^0.3.8"

langchain-community = "^0.3.8"

pypdf2 = "^3.0.1"
nltk = "^3.9.1"
langchain-openai = "^0.2.10"
httpx = "^0.27.2"
free-verify-proxy = "^1.1.7"

llamaapi = "^0.1.36"
langchain-google-vertexai = "^2.0.8"
langchain-nvidia-ai-endpoints = "^0.3.5"
pandas = "^2.2.3"
sentence-transformers = "^3.3.1"
langchain-huggingface = "^0.1.2"
g4f = {extras = ["all"], version = "^0.3.7.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
